fasto/tests/task-2-tests/replicate-exception.err
Type error: Type mismatch in 1st argument of scan: expected int, but got char at line 2, column 14
